feat(backend): enhance item management; add retrieval by name and refactor service methods for improved mapping