@@ -1,6 +1,7 @@
 package tech.yasasbanuka.backend.service.impl;
 
 import lombok.RequiredArgsConstructor;
+import org.modelmapper.ModelMapper;
 import org.springframework.stereotype.Service;
 import tech.yasasbanuka.backend.dto.ItemDTO;
 import tech.yasasbanuka.backend.entity.Item;
@@ -8,31 +9,21 @@ import tech.yasasbanuka.backend.repository.ItemRepo;
 import tech.yasasbanuka.backend.service.ItemService;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
 public class ItemServiceImpl implements ItemService {
-
     private final ItemRepo itemRepo;
+    private final ModelMapper modelMapper;
 
     @Override
     public void createItem(ItemDTO itemDTO) {
-        Item item = new Item();
-        item.setName(itemDTO.getName());
-        item.setStock(itemDTO.getStock());
-        item.setPrice(itemDTO.getPrice());
-        itemRepo.save(item);
+        itemRepo.save(modelMapper.map(itemDTO, Item.class));
     }
 
     @Override
     public void updateItem(ItemDTO itemDTO) {
-        Item item = itemRepo.findById(itemDTO.getId())
-                .orElseThrow(() -> new RuntimeException("Item not found"));
-        item.setName(itemDTO.getName());
-        item.setStock(itemDTO.getStock());
-        item.setPrice(itemDTO.getPrice());
-        itemRepo.save(item);
+        itemRepo.save(modelMapper.map(itemDTO, Item.class));
     }
 
     @Override
@@ -41,16 +32,19 @@ public class ItemServiceImpl implements ItemService {
     }
 
     @Override
-    public ItemDTO getItem(Long identity) {
-        Item item = itemRepo.findById(identity)
-                .orElseThrow(() -> new RuntimeException("Item not found"));
-        return new ItemDTO(item.getId(), item.getName(), item.getStock(), item.getPrice());
+    public ItemDTO getItem(Long id) {
+        Item item = itemRepo.findById(id).orElseThrow(() -> new RuntimeException("Error when finding the item using id"));
+        return modelMapper.map(item, ItemDTO.class);
+    }
+
+    @Override
+    public ItemDTO getItemByName(String name) {
+        Item item = itemRepo.findByName(name).orElseThrow(() -> new RuntimeException("Error when finding the item using name"));
+        return modelMapper.map(item, ItemDTO.class);
     }
 
     @Override
     public List<ItemDTO> getAllItems() {
-        return itemRepo.findAll().stream()
-                .map(item -> new ItemDTO(item.getId(), item.getName(), item.getStock(), item.getPrice()))
-                .collect(Collectors.toList());
+        return itemRepo.findAll().stream().map(item -> modelMapper.map(item, ItemDTO.class)).toList();
     }
 }
